# fdf

./: 10-2.fdf  42.fdf  CMakeLists.txt  Makefile  camera.c  camera.h  close_window.c  draw.c  draw_misc.c  draw_misc.h  error.c  errors.h  fdf  fdf.h  get_next_line.c  get_next_line.h  gradient.c  graphics.h  keyboard_controls.c  keyboard_controls.h  keys.h  line.c  line.h  main.c  map.h  map_create.c  rotate.c  rotate.h  supporting_functions.c  supporting_functions.h  test.xpm  test2  xpm_menu  xpm_test
includes/: draw_misc.h
libft/: .ft_strsplit.c.swp  Makefile  ft_strsplit.c  get_next_line.c
libft/includes/: get_next_line.h
sources/: .draw.c.swp  draw.c  draw_misc.c  main.c  map_create.c  map_create_misc.c
